--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "slim/slim": "^3.0",
         "slim/php-view": "^2.2",
-        "illuminate/database": "~5.1"
+        "illuminate/database": "~5.1",
+        "erusev/parsedown": "^1.7"
     }
 }
