--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "slim/slim": "^3.0",
         "slim/php-view": "^2.2",
         "illuminate/database": "~5.1",
-        "erusev/parsedown": "^1.7"
+        "erusev/parsedown": "^1.7",
+        "diff/diff": "^3.2"
     }
 }
